<resources>
    <string name="app_name">LaMontanaApp</string>
    <string name="name_app">Montay</string>
    <string name="enviar">Enviar</string>
    <string name="usuario">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="productos">Productos</string>
    <string name="pedidos">Pedidos</string>
    <string name="clientes">Clientes</string>
    <string name="nombre_producto">Nombre producto</string>
    <string name="crear_producto_btn">Crear</string>
    <string name="crear_producto">Crear producto</string>
    <string name="presentaci_n">Presentación</string>
    <string name="crear_pedidos">Crear pedidos</string>
    <string name="documento">Documento</string>
    <string name="nombre_razon_social">Nombre-Razon social</string>
    <string name="direcci_n">Dirección</string>
    <string name="telefono">Teléfono</string>
    <string name="municipio">Municipio</string>
    <string name="crear_cliente">Crear cliente</string>
</resources>