<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical">


    <TextView
        android:layout_marginHorizontal="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_producto"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        >

    </TextView>

    <EditText
        android:id="@+id/etProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:hint="@string/nombre_producto"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"
        android:textColorHint="@color/black" />
    <EditText
        android:id="@+id/etPresenteacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:hint="@string/presentaci_n"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"
        android:textColorHint="@color/black" />


    <Button
        android:id="@+id/btnAddProduct"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/crear_producto_btn"
        android:backgroundTint="@color/title"
        app:cornerRadius="20dp"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        />


</LinearLayout>