<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:paddingHorizontal="30dp"
    android:paddingVertical="32dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.Home">
    <androidx.cardview.widget.CardView
        android:id="@+id/viewPedidos"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="30dp"
        android:foreground="@drawable/borde"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@+id/viewProdctos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/pedidos"
                app:tint="@color/title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pedidos"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/title" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewProdctos"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:strokeColor="@color/title"
        app:strokeWidth="4dp"
        android:foreground="@drawable/borde"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/viewPedidos"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/productos"
                app:tint="@color/title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/productos"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/title" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewCustomers"
        android:layout_width="320dp"
        android:layout_height="150dp"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="32dp"
        app:strokeColor="@color/title"
        app:strokeWidth="4dp"
        android:foreground="@drawable/borde"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPedidos">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/cliente"
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/clientes"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/title" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>